# platzmonitor

./: .gitignore  README.md  package.json  pnpm-lock.yaml  prettier.config.mjs
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/src/app/: __init__.py  loggers.py  logging_config.py  logging_utils.py  main.py  outgoing_http.py  settings.py
backend/src/app/models/: __init__.py  schema.py
backend/src/app/pretalx/: __init__.py  proxy.py  schedule.py
backend/src/app/pretix/: __init__.py  client.py
backend/src/app/routes/: __init__.py  availability.py  booking_timeline.py  events.py  history.py  pretalx_public.py  registrations.py
backend/src/app/services/: __init__.py  availability_cache.py  availability_service.py  availability_snapshot_store.py  booking_timeline.py  events_catalog.py  group_rules.py  history_store.py  registrations_aggregator.py  registrations_store.py
backend/src/app/tools/: __init__.py  import_pretix_history.py  rebuild_booking_timeline.py
backend/tests/: test_availability_pretalx_meta.py  test_pretalx_schedule.py  test_public_api.py
deploy/: README.md  abfahrtsmonitor-config.js.example
deploy/logrotate/: platzmonitor
deploy/nginx/: README.md  fossgis.mapwebbing.eu.conf  http-snippet-limits.conf
deploy/systemd/: README.md  fossgis-platzmonitor-backend.service  fossgis-platzmonitor-backend.user.service
frontend/: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: platzmonitor-embed.js
scripts/: pretix_discover.py  pyproject.toml
(+55 files in other folders)
